Change the color of the Solve it heading so that it is clearly visible

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ h3 {
 .hero-section .herocontainer h1 {
   margin-top: 130px;
   font-size: 8rem;
+  color: black;
   text-shadow: 2px 2px 2px #0c27a1;
   
 }
